# EmbeddingBuddy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  bump_version.py  docker-compose.yml  main.py  pyproject.toml  run_dev.py  run_prod.py  wsgi.py
.claude/: settings.local.json
.gitea/workflows/: bump-and-release.yml  release.yml  security.yml  test.yml
.github/workflows/: docker-release.yml  pypi-release.yml  release.yml
assets/: embeddings.js  transformers-loader.js
example/: README_elasticsearch.md  sample_data.ndjson  sample_data_es_bulk.ndjson  sample_prompts.ndjson  sample_prompts_es_bulk.ndjson
example/bad/: bad_binary_content.ndjson  bad_empty_lines.ndjson  bad_inconsistent_dimensions.ndjson  bad_invalid_embeddings.ndjson  bad_malformed_json.ndjson  bad_missing_embedding.ndjson  bad_missing_text.ndjson  bad_not_ndjson.json
src/embeddingbuddy/: __init__.py  app.py  cli.py  wsgi.py
src/embeddingbuddy/config/: settings.py
src/embeddingbuddy/data/: parser.py  processor.py
src/embeddingbuddy/models/: field_mapper.py  reducers.py  schemas.py
src/embeddingbuddy/ui/: layout.py
src/embeddingbuddy/ui/callbacks/: data_processing.py  interactions.py  visualization.py
src/embeddingbuddy/ui/components/: about.py  datasource.py  sidebar.py  textinput.py  upload.py
src/embeddingbuddy/visualization/: colors.py  plots.py
tests/: test_bad_data.py  test_client_embeddings.py  test_data_processing.py  test_opensearch.py  test_reducers.py
